# iracing-overlay

./: Cargo.toml  README.md
src/: app.rs  lastlaptime.rs  main.rs  speed.rs  telemetry.rs  util.rs
