[package]
name = "iracing_overlay"
version = "0.2.1"
edition = "2021"

[dependencies]
eframe = { version = "0.28", features = ["default"] }
egui = {version = "0.28", features = ["serde"] }
serde = { version = "1.0.209", features = ["derive"] }
confy = "0.6.1"
iracing = "0.4.1"
toml = "0.8.19"

[[bin]]
name = "iracing-overlay"
path = "src/main.rs"

[[bin]]
name = "speed"
path = "src/speed.rs"

[[bin]]
name = "lastlaptime"
path = "src/lastlaptime.rs"
